Fixed scrollbar in details view url list

--- a/src/network/network_style.css
+++ b/src/network/network_style.css
@@ -110,7 +110,7 @@ button[handler="close-request-detail"]
   height: 100%;
   padding: 0;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .network-details-request
